--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,36 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
+}
+
+p {
+  font-size: 35px;
+  color: #495057;
+  font-weight: bold;
+  text-align: center;
+}
+
+button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  cursor: pointer;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 30px;
+  border-radius: 5px;
+}
+
+.button-2 {
+  margin-left: 20px;
+}
+
+button:hover {
+  background-color: #459447;
+  transition: background-color 0.5s ease;
 }
