--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -8,6 +12,9 @@ body {
   display: flex;
   justify-content: center;
   padding-top: 20px;
+  /* Since it styles inline or inline block elements, works to perfectly center buttons */
+  text-align: center;
+  background-color: #f5f5f5;
 }
 
 p {
@@ -37,4 +44,23 @@ button {
 button:hover {
   background-color: #459447;
   transition: background-color 0.5s ease;
+}
+
+input {
+  border: 5px solid white;
+    -webkit-box-shadow:
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1);
+    -moz-box-shadow:
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1);
+    box-shadow:
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1);
+    padding: 15px;
+    background: rgba(255,255,255,0.5);
+  padding: 12px 20px;
+  margin-top: 40px;
+  font-size: 20px;
+  border-radius: 5px;
 }
